# taller-mecanico-so

./: .gitignore  Makefile  README.md  server
src/: Cliente.cpp  Cliente.h  ClienteVehiculo.cpp  ClienteVehiculo.h  EstacionTrabajo.cpp  EstacionTrabajo.h  Inventario.cpp  Inventario.h  Pieza.cpp  Pieza.h  Server.cpp  Servicio.cpp  Servicio.h  SistemaVehiculo.cpp  SistemaVehiculo.h  Vehiculo.cpp  Vehiculo.h  main.cpp  registros.cpp  server.cpp
src/build-centro_garantia_vehiculos-Desktop_Qt_6_6_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  Makefile  build.ninja  centro_garantia_vehiculos  cmake_install.cmake  qtcsettings.cmake
src/build-centro_garantia_vehiculos-Desktop_Qt_6_6_1_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-6e6320b0ebc337614cd1.json  cmakeFiles-v1-14fed7b32f175faddb41.json  cmakeFiles-v1-c815884b4da702f7da19.json  codemodel-v2-b0a2e6728d8f6a40a86e.json  directory-.-Debug-201100804d67e7120230.json  index-2023-12-20T23-04-45-0352.json  index-2023-12-20T23-13-33-0079.json  target-centro_garantia_vehiculos-Debug-348e4d2a7b1027cad126.json  target-centro_garantia_vehiculos_autogen-Debug-cb3ec552da4ae1777631.json
src/build-centro_garantia_vehiculos-Desktop_Qt_6_6_1_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: target-centro_garantia_vehiculos_autogen_timestamp_deps-Debug-b9c0db23e77643ac17ff.json
src/build-centro_garantia_vehiculos-Desktop_Qt_6_6_1_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
src/build-centro_garantia_vehiculos-Desktop_Qt_6_6_1_GCC_64bit-Debug/centro_garantia_vehiculos_autogen/: deps
src/build-centro_garantia_vehiculos-Desktop_Qt_6_6_1_GCC_64bit-Debug/centro_garantia_vehiculos_autogen/EWIEGA46WW/: moc_mainwindow.cpp
src/build-centro_garantia_vehiculos-Desktop_Qt_6_6_1_GCC_64bit-Debug/centro_garantia_vehiculos_autogen/include/: ui_mainwindow.h
src/build-centro_garantia_vehiculos-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  Makefile.Debug  Makefile.Release  build.ninja  cmake_install.cmake
src/build-centro_garantia_vehiculos-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-a7b4ca9f1582cada9aa0.json  codemodel-v2-f05ad0f869a89382d67d.json  directory-.-Debug-5762aef253db462f3c3c.json  index-2023-12-28T18-50-43-0276.json  index-2023-12-28T23-37-56-0662.json  target-centro_garantia_vehiculos-Debug-84cf213b1ef0b0f2abc3.json  target-centro_garantia_vehiculos-Debug-cad750f770ba08c5dd0b.json
src/build-centro_garantia_vehiculos-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-7b8647d93fa33e8ca550.json  codemodel-v2-950ee9aff517ec6f15aa.json  codemodel-v2-be11803b3ef73eb316e9.json  codemodel-v2-d89afee4c67babd03386.json  index-2023-12-27T23-22-00-0375.json  index-2023-12-28T23-37-53-0384.json  target-centro_garantia_vehiculos-Debug-83559c5957fd747a0c8a.json  target-centro_garantia_vehiculos-Debug-b39737f6bae1af6690ea.json  target-centro_garantia_vehiculos_autogen-Debug-89113676292c24a7f315.json  target-centro_garantia_vehiculos_autogen_timestamp_deps-Debug-b42d53468eda8821dc17.json
src/build-centro_garantia_vehiculos-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
src/build-centro_garantia_vehiculos-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
src/build-centro_garantia_vehiculos-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: Clases.cpp.DA85F29533507589.idx  Clases.h.06CDA164CD3DFF6C.idx  Cliente.cpp.53A25C7DBBA73FDC.idx  Cliente.cpp.B222C67A71D16B8A.idx  Cliente.h.68565DC1F1ECAC75.idx  Cliente.h.DF4DB7F60FE044B1.idx  QApplication.9A108BAC1BE26BE4.idx  QDateTimeEdit.2246392E6B1D1FDE.idx  QDialog.E0BE8C11B1AA89CA.idx  QGuiApplication.92BDCE8430EDBA45.idx  QHeaderView.294A915C24808953.idx  QLayout.225F90EF364F805D.idx  QLineEdit.C8F07504C9AA816E.idx  QList.4FC8C83584EBBE1C.idx  QObject.F73126368980542F.idx  (+209 more)
src/build-centro_garantia_vehiculos-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/centro_garantia_vehiculos_autogen/: deps  mocs_compilation.cpp
src/build-centro_garantia_vehiculos-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/centro_garantia_vehiculos_autogen/EWIEGA46WW/: moc_centrogarantiavehiculo.cpp
src/build-centro_garantia_vehiculos-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/centro_garantia_vehiculos_autogen/include/: ui_centrogarantiavehiculo.h
src/build-centro_garantia_vehiculos-Desktop_Qt_6_6_1_MinGW_64_bit-Release/: Makefile  Makefile.Debug  Makefile.Release
src/build-centro_garantia_vehiculos-Desktop_Qt_6_6_1_MinGW_64_bit-Release/.qtc_clangd/: compile_commands.json
src/build-taller-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
src/build-taller-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
src/build-taller-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
src/build-taller-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/taller_autogen/: deps  mocs_compilation.cpp
src/build-taller-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/taller_autogen/EWIEGA46WW/: moc_taller.cpp
src/build-taller-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/taller_autogen/include/: ui_taller.h
src/centro_garantia_vehiculos/: CMakeLists.txt  Clases.cpp  Clases.h  Cliente.cpp  Cliente.h  Guardar.cpp  centro_garantia_vehiculos.pro  centrogarantiavehiculo.cpp  centrogarantiavehiculo.h  centrogarantiavehiculo.ui  clientUtils.cpp  clientUtils.h  main.cpp  mainwindow.ui  manual.cpp  manual.h  tempCodeRunnerFile.cpp
src/headers/: Cliente.h  EstacionTrabajo.h  Inventario.h  Pieza.h  Server.h  SistemaVehiculo.h  Vehiculo.h
src/taller/: CMakeLists.txt  TallerMecanico.cpp  TallerMecanico.h  clases.cpp  clases.h  main.cpp  server.cpp  server.h  taller.cpp  taller.h  taller.ui  taller_es_VE.ts
(+126 files in other folders)
